# hyprclaw

./: .gitignore  ANALYSIS_SUMMARY.md  CHANGES.md  CLICK_AUTOMATION_ENHANCED.md  CLICK_RELIABILITY_ANALYSIS.md  COMPLETE_FIX_SUMMARY.md  Cargo.toml  FIX_AGENT_LOOP_COMPLETION.md  GITHUB_MODELS_INTEGRATION.md  GITHUB_MODELS_SETUP.md  GITHUB_MODE_USAGE.md  GITHUB_PROVIDER_SETUP.md  GROQ_PROVIDER_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_README.md  INDEX.md  LICENSE  MODULAR_IMPLEMENTATION.md  PICOCLAW_IMPORT_PLAN_README.md  PICOCLAW_VS_HYPRCLAW.md  QUICK_FIX_GUIDE.md  QUICK_REFERENCE.md  README.md  VISUAL_TASK_FIX.md  context.md  setup_groq.sh  test_click.sh
.kiro/settings/: lsp.json
crates/core/: Cargo.toml
crates/core/src/: agent_engine.rs  lib.rs  metrics.rs  planning.rs  types.rs
crates/executor/: Cargo.toml
crates/executor/src/: command_executor.rs  environment.rs  lib.rs
crates/hypr-claw-antigravity/: Cargo.toml
crates/hypr-claw-antigravity/examples/: basic_usage.rs  chat.rs  test_integration.rs
crates/hypr-claw-antigravity/src/: accounts.rs  api_client.rs  fingerprint.rs  lib.rs  models.rs  oauth.rs  request_transform.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: lib.rs  terminal.rs  traits.rs
crates/memory/: Cargo.toml
crates/memory/src/: compactor.rs  context_manager.rs  lib.rs  types.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs  permissions.rs  soul.rs
crates/providers/: Cargo.toml
crates/providers/examples/: codex_test.rs
crates/providers/src/: lib.rs  openai_compatible.rs  traits.rs
crates/providers/src/codex/: constants.rs  mod.rs  oauth.rs  server.rs  transform.rs  types.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: file_tools.rs  lib.rs  process_tools.rs  registry.rs  system_tools.rs  traits.rs
hypr-claw-app/: Cargo.toml
hypr-claw-app/examples/: test_yaml.rs
hypr-claw-app/src/: bootstrap.rs  config.rs  debug_notify.rs  debug_timeline.rs  lib.rs  main.rs  repl.rs  tool_setup.rs
hypr-claw-app/src/commands/: health.rs  init.rs  mod.rs  run.rs
hypr-claw-app/src/scan/: classifier.rs  discovery.rs  file_classifier.rs  integration.rs  mod.rs  policy.rs  progress.rs  resource.rs  scanner.rs
hypr-claw-app/src/scan/parsers/: git.rs  hyprland.rs  mod.rs  shell.rs
hypr-claw-app/tests/: e2e_workflow_test.rs  integration_test.rs  session_persistence_test.rs  test_bootstrap.rs  test_config.rs  test_config_parsing.rs  test_integration_workflow.rs  test_scan_integration.rs
hypr-claw-infra/: Cargo.toml
hypr-claw-infra/src/infra/: audit_adapter.rs  audit_logger.rs  audit_logger_chained.rs  contracts.rs  credential_store.rs  distributed.rs  distributed_adapters.rs  integrity.rs  lock_manager.rs  memory_store.rs  mod.rs  permission_adapter.rs  permission_engine.rs  rate_limiter.rs  scheduler.rs  session_store.rs
hypr-claw-infra/tests/: integration_test_infra.rs  test_audit_logger.rs  test_audit_logger_chained.rs  test_credential_store.rs  test_credential_store_hardened.rs  test_distributed.rs  test_hardened_integration.rs  test_lock_manager.rs  test_lock_manager_hardened.rs  test_memory_store.rs  test_permission_engine.rs  test_scheduler.rs  test_session_store.rs
hypr-claw-runtime/: Cargo.toml
hypr-claw-runtime/src/: agent_config.rs  agent_loop.rs  async_adapters.rs  codex_adapter.rs  compactor.rs  debug.rs  gateway.rs  github_models_client.rs  interfaces.rs  lib.rs  llm_client.rs  llm_client_type.rs  metrics.rs  prompt_builder.rs  runtime_controller.rs  tool_call_normalizer.rs  tool_logger.rs  types.rs
hypr-claw-runtime/tests/: failure_scenarios.rs  failure_simulation.rs  fuzz_agent_loop.rs  fuzz_llm_parsing.rs  integration_runtime.rs  lock_permit_safety.rs  schema_versioning.rs  startup_integrity.rs  stress_test.rs  test_llm_client_auth.rs  test_production_hardening.rs  test_tool_pipeline.rs
hypr-claw-tools/: Cargo.toml
hypr-claw-tools/examples/: test_os_capabilities.rs
hypr-claw-tools/src/: audit_adapter.rs  dispatcher.rs  error.rs  execution_context.rs  fast_window_state.rs  lib.rs  os_tools.rs  permission_adapter.rs  pipeline.rs  registry.rs  runtime_health.rs  traits.rs  workspace_controller.rs
hypr-claw-tools/src/imported/: discovery.rs  filesystem.rs  mod.rs
hypr-claw-tools/src/os_capabilities/: desktop.rs  filesystem.rs  hyprland.rs  mod.rs  process.rs  system.rs
hypr-claw-tools/src/sandbox/: command_guard.rs  limits.rs  mod.rs  path_guard.rs
hypr-claw-tools/src/tools/: base.rs  echo.rs  file_list.rs  file_read.rs  file_write.rs  mod.rs  shell_exec.rs
hypr-claw-tools/tests/: adversarial.rs  integration.rs  sandbox.rs  unit.rs
