[workspace]
members = [
    "crates/core",
    "crates/policy",
    "crates/memory",
    "crates/tools",
    "crates/executor",
    "crates/interfaces",
    "crates/providers",
    "crates/tasks",
    "crates/hypr-claw-antigravity",
    "hypr-claw-app",
    # Legacy crates (will be migrated)
    "hypr-claw-runtime",
    "hypr-claw-tools",
    "hypr-claw-infra",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hypr-Claw Team"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
tempfile = "3.8"
