[package]
name = "hypr-claw-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "hypr_claw_app"
path = "src/lib.rs"

[[bin]]
name = "hypr-claw"
path = "src/main.rs"

[dependencies]
# New architecture
hypr-claw-core = { path = "../crates/core" }
hypr-claw-memory = { path = "../crates/memory" }
hypr-claw-policy = { path = "../crates/policy" }
hypr-claw-executor = { path = "../crates/executor" }
hypr-claw-tools-new = { path = "../crates/tools" }
hypr-claw-providers = { path = "../crates/providers" }
hypr-claw-interfaces = { path = "../crates/interfaces" }
hypr-claw-tasks = { path = "../crates/tasks" }

# Legacy (for migration)
hypr_claw = { path = "../hypr-claw-infra" }
hypr_claw_tools = { path = "../hypr-claw-tools" }
hypr-claw-runtime = { path = "../hypr-claw-runtime" }

tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
rpassword = "7.3"
rand = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
num_cpus = "1.16"
async-recursion = "1.0"

[dev-dependencies]
parking_lot = "0.12"
