[package]
name = "hypr_claw"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"
cron = "0.12"
tokio = { version = "1.36", features = ["full"] }
zeroize = "1.7"
rand = "0.8"
async-trait = "0.1"
hypr_claw_tools = { path = "../hypr-claw-tools" }

[dev-dependencies]
tempfile = "3.10"
