[package]
name = "hypr-claw-runtime"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
async-trait = "0.1"
hypr_claw = { path = "../hypr-claw-infra" }
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.13", optional = true }
hypr-claw-providers = { path = "../crates/providers" }
hypr-claw-memory = { path = "../crates/memory" }

[features]
default = []
prometheus = ["metrics-exporter-prometheus"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"
