[package]
name = "hypr_claw_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
rlimit = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
libc = "0.2"
sysinfo = "0.30"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
tempfile = "3"
