[package]
name = "hypr-claw-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true

hypr-claw-memory = { path = "../memory" }
hypr-claw-policy = { path = "../policy" }
hypr-claw-providers = { path = "../providers" }
