[package]
name = "hypr-claw-antigravity"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
tracing = "0.1"
hex = "0.4"
